Fix drop-down text cutoff

--- a/sites/all/themes/big/css/custom.css
+++ b/sites/all/themes/big/css/custom.css
@@ -674,6 +674,9 @@ a.facebook {
 .selectBox-dropdown .selectBox-label {
 	padding-top: 6px;
 	padding-bottom: 0px;
+	width: 420px;
+	min-width: 420px;
+	max-width: 100%;
 }
 .selectBox-dropdown{
 	width: 480px;
